# winpane

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml
.agents/skills/bump-version/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
_docs/initial-implementation/: phases-progress.md
_docs/initial-implementation/p3-ffi/: agi-claude.md  agi-kimi.md  agi-prompt-claude.md  agi-prompt-kimi.md  brainstorm.md  breakdown-review.md  initial-plan.md  learnings.md  plan.md  prompt.md  proposal.md
_docs/initial-implementation/p3-ffi/.agi-state/: prompt.md
_docs/initial-implementation/p3-ffi/1-custom-draw-core/: plan.md  pr.md  spec.md
_docs/initial-implementation/p3-ffi/2-ffi-crate-setup/: plan.md  pr.md  spec.md
_docs/initial-implementation/p3-ffi/3-ffi-types-and-handles/: plan.md  pr.md  spec.md
_docs/initial-implementation/p3-ffi/4-ffi-functions/: plan.md  pr.md  spec.md
_docs/initial-implementation/p3-ffi/5-examples-and-ci/: plan.md  pr.md  spec.md
_docs/initial-implementation/p4-advanced-surfaces/: learnings.md  plan.md
_docs/initial-implementation/p4-advanced-surfaces/2-monitor-and-capture/: plan.md  pr.md
_docs/initial-implementation/p4-advanced-surfaces/3-engine-integration/: plan.md  pr.md
_docs/initial-implementation/p4-advanced-surfaces/4-public-api-and-ffi/: plan.md  pr.md
_docs/initial-implementation/p4-advanced-surfaces/5-examples-and-verification/: plan.md  pr.md
_docs/initial-implementation/p6-polish/: plan.md
_docs/initial-implementation/p6-polish/1-backdrop-effects/: plan.md  pr.md
_docs/initial-implementation/p6-polish/2-device-loss-recovery/: plan.md  pr.md
_docs/initial-implementation/p6-polish/4-fade-animations/: plan.md  pr.md
_docs/initial-implementation/p6-polish/6-examples-ci/: plan.md  pr.md
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
crates/winpane/: Cargo.toml
crates/winpane-core/: Cargo.toml
crates/winpane-core/src/: command.rs  display.rs  engine.rs  input.rs  lib.rs  monitor.rs  persist.rs  renderer.rs  scene.rs  tray.rs  types.rs  window.rs
crates/winpane-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/winpane-ffi/include/: winpane.def  winpane.h
crates/winpane-ffi/src/: lib.rs
crates/winpane-host/: Cargo.toml
crates/winpane-host/src/: dispatch.rs  main.rs  protocol.rs  util.rs
crates/winpane-host/wix/: License.rtf  main.wxs
crates/winpane/src/: lib.rs
crates/winpane/tests/: api_test.rs  panel_test.rs
docs/: architecture.md  cookbook.md  design.md  limitations.md  protocol.md  signing.md
docs/design/: ffi.md  input.md  rendering.md  style.md  surfaces.md  threading.md
docs/guides/: c.md  go.md  nodejs.md  python.md  rust.md  typescript.md  zig.md
examples/c/: CMakeLists.txt  build.bat  custom_draw.c  hello_hud.c
examples/node/: backdrop_demo.js  hud_demo.js  interactive_panel.js
examples/python/: clock_overlay.py  glucose_monitor.py  hud_demo.py
examples/rust/: anchored_companion.rs  backdrop_demo.rs  capture_excluded.rs  clock_overlay.rs  color_picker.rs  countdown_timer.rs  custom_draw.rs  fade_demo.rs  glucose_monitor.rs  hello_transparent.rs  hud_demo.rs  interactive_panel.rs  pip_viewer.rs  sticky_notes.rs  stock_ticker.rs  system_monitor.rs  tray_ticker.rs
examples/typescript/: clock_overlay.ts  env.d.ts  glucose_monitor.ts  pomodoro.ts  sticky_notes.ts  stock_ticker.ts  tsconfig.json
release-assets/: README.md
scripts/: bump-version.ps1  bump-version.sh  pre-push
