[package]
name = "winpane-node"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Node.js native addon for winpane - Windows companion surface SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
winpane = { version = "0.0.1", path = "../../crates/winpane" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

[build-dependencies]
napi-build = "2"
