[package]
name = "winpane-node"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Node.js native addon for winpane - Windows companion surface SDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
winpane = { version = "0.1.0", path = "../../crates/winpane" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[build-dependencies]
napi-build = "2"
