[package]
name = "winpane-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core for winpane - Windows companion surface SDK"

[lints]
workspace = true

[dependencies]
windows-numerics = "0.3"

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[[example]]
name = "hello_transparent"
path = "../../examples/rust/hello_transparent.rs"
