[package]
name = "winpane-core"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core for winpane - Windows companion surface SDK"

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true }
windows-numerics = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls",
]

[[example]]
name = "hello_transparent"
path = "../../examples/rust/hello_transparent.rs"
