[package]
name = "winpane-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI bindings for winpane - Windows companion surface SDK"

[lints]
workspace = true

[lib]
name = "winpane"
crate-type = ["cdylib", "staticlib"]

[dependencies]
winpane = { version = "0.1.0", path = "../winpane" }

[build-dependencies]
cbindgen = { workspace = true }
