[package]
name = "winpane-host"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/stdio JSON-RPC host for winpane - Windows companion surface SDK"

[dependencies]
winpane = { version = "0.0.1", path = "../winpane" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

[lints]
workspace = true
