[package]
name = "winpane-host"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/stdio JSON-RPC host for winpane - Windows companion surface SDK"

[dependencies]
winpane = { version = "0.0.1", path = "../winpane" }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }

[lints]
workspace = true
