[package]
name = "winpane"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows companion surface SDK - overlays, HUDs, panels, widgets, tray indicators"

[lints]
workspace = true

[dependencies]
winpane-core = { version = "0.0.1", path = "../winpane-core" }

[[example]]
name = "hud_demo"
path = "../../examples/rust/hud_demo.rs"

[[example]]
name = "interactive_panel"
path = "../../examples/rust/interactive_panel.rs"

[[example]]
name = "tray_ticker"
path = "../../examples/rust/tray_ticker.rs"
