[package]
name = "winpane"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows companion surface SDK - overlays, HUDs, panels, widgets, tray indicators"

[lints]
workspace = true

[dependencies]
winpane-core = { version = "0.0.1", path = "../winpane-core" }

[dev-dependencies]
ureq = "3"
serde_json = { workspace = true }

[dev-dependencies.windows]
workspace = true
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_SystemInformation"]

[[example]]
name = "hud_demo"
path = "../../examples/rust/hud_demo.rs"

[[example]]
name = "interactive_panel"
path = "../../examples/rust/interactive_panel.rs"

[[example]]
name = "tray_ticker"
path = "../../examples/rust/tray_ticker.rs"

[[example]]
name = "custom_draw"
path = "../../examples/rust/custom_draw.rs"

[[example]]
name = "pip_viewer"
path = "../../examples/rust/pip_viewer.rs"

[[example]]
name = "anchored_companion"
path = "../../examples/rust/anchored_companion.rs"

[[example]]
name = "capture_excluded"
path = "../../examples/rust/capture_excluded.rs"

[[example]]
name = "backdrop_demo"
path = "../../examples/rust/backdrop_demo.rs"

[[example]]
name = "fade_demo"
path = "../../examples/rust/fade_demo.rs"

[[example]]
name = "clock_overlay"
path = "../../examples/rust/clock_overlay.rs"

[[example]]
name = "glucose_monitor"
path = "../../examples/rust/glucose_monitor.rs"
